<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_app">Calculator App</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="x">X</string>
    <string name="button_divide">/</string>
    <string name="the_result">The Result</string>
</resources>